    * Can be used in place of Chicken feathers.
* Sea Lanterns can be crafted in an additional way now.
* Added Sea Lamp blocks.
    * Have a light value equal to Glowstone.
    * Can be crafted using Shinestone and Lapis Ingots.
    * Generate naturally in rivers and oceans (including deep oceans).
* Black Marble can now be mined using the same harvest level as White Marble.
* Shadow Skeletons, Scorpions, Shades and Mummies now drop Shadow Essence.
* Removed regular Skeletons from Upside-Down spawns.
* Added Corruption Blocks and a Corruption biome to the Upside-Down.
    * Walking on Corrupt Blocks will damage the Player unless the Anti-Corruption potion effect is active.
* Corruption layer now spawns in the Upside-Down at layers 20 and below.
* Added Corrupt Etrium Ore to Corruption Blocks.
    * Drops Etrium.
        * Can be crushed.
            * Crushed Etrium can be smelted back into regular Etrium.
* Added Corrupt Ascendium Ore to Corruption Blocks.
    * Drops Ascendium.
        * Used in making Ascendant Amaranth Ingots.
* Added Corrupt Stone Bricks.
* Added Corrupt Chargium Ore.
    * Can be smelted and pulverized into Chargium Dust.
* Added Corrupt Rock and Corrupt Creepstone to Corruption layer.
* Increased chance for Grand Canyon biome to spawn.
* Added Creepstone and Creepdirt.
* Added Shadow Essence Block.
    * Crafted from 9 pieces of Shadow Essence.
* Added Upside-Down Stone Bricks.
    * Crafted from 4 pieces of Upside-Down Stone.
* Added a lot more ores to the Upside-Down.
* Flour now cooks into 2 pieces of bread.
* Added Shinestone Crystal, Polished Shinestone and Shinestone Crystal Bricks.
    * Shinestone Crystal crafted from four pieces of Shinestone Ingots.
    * Polished Shinestone crafted from four pieces of Shinestone Crystal.
    * Shinestone Crystal bricks crafted from four pieces of Polished Shinestone.
* Added Mummies.
    * Stronger and faster than Zombies.
    * Have a chance to drop paper.
* Added the Radiance potion effect.