@@ -6,6 +6,7 @@ import net.minecraftforge.fml.client.registry.RenderingRegistry;
 import zollernextras.mobs.entities.EntityDuck;
 import zollernextras.mobs.entities.EntityHellDuck;
 import zollernextras.mobs.entities.EntityHellFish;
+import zollernextras.mobs.entities.EntityKrull;
 import zollernextras.mobs.entities.EntityMegaCreeper;
 import zollernextras.mobs.entities.EntityMummy;
 import zollernextras.mobs.entities.EntityScorpion;
@@ -14,6 +15,7 @@ import zollernextras.mobs.entities.EntityShadowSkeleton;
 import zollernextras.mobs.renderers.RenderDuck;
 import zollernextras.mobs.renderers.RenderHellDuck;
 import zollernextras.mobs.renderers.RenderHellFish;
+import zollernextras.mobs.renderers.RenderKrull;
 import zollernextras.mobs.renderers.RenderMegaCreeper;
 import zollernextras.mobs.renderers.RenderMummy;
 import zollernextras.mobs.renderers.RenderScorpion;
@@ -31,9 +33,10 @@ public class MobRenders {
 		RenderMob(EntityShadowSkeleton.class, RenderShadowSkeleton::new);
 		RenderMob(EntityMummy.class, RenderMummy::new);
 		RenderMob(EntityShade.class, RenderShade::new);
+		RenderMob(EntityKrull.class, RenderKrull::new);
 	}
 	
-	public static <T extends Entity> void RenderMob(Class<T> entityClass,
+	private static <T extends Entity> void RenderMob(Class<T> entityClass,
 			IRenderFactory<? super T> renderFactory) {
 		RenderingRegistry.registerEntityRenderingHandler(entityClass, renderFactory);
 	}
