@@ -2,6 +2,12 @@ package zollernextras.mobs.entities;
 
 public interface IShadeEntity {
 	
-	public boolean isShadowBeing();
+	public default boolean isShadowBeing() {
+		return true;
+	};
+	
+	public default boolean shouldAttackLightEntity() {
+		return true;
+	}
 	
 }
